@@ -1,0 +1,9 @@
+# $NetBSD: Makefile,v 1.1 2008/10/30 00:27:32 joerg Exp $
+
+NOMAN=	# define
+
+FILES=	dist/LICENSE.ipw3945-ucode dist/README.ipw3945-ucode dist/ipw3945.ucode
+
+FILESDIR=	/libdata/firmware/if_wpi
+
+.include <bsd.files.mk>
